syntax = "proto3";

package session;


service SessionService {
  rpc ValidateSession (ValidateSessionRequest) returns (ValidateSessionResponse) {}
  rpc CreateSession (CreateSessionRequest) returns (CreateSessionResponse) {} 
  rpc RemoveSession (RemoveSessionRequest) returns (RemoveSessionResponse) {}
}


message ValidateSessionRequest {
  string sessionToken = 1;
}

message ValidateSessionResponse {
  int32 userId = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string role = 5;
}

message CreateSessionRequest {
  int32 userId = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string role = 5;
}

message CreateSessionResponse {
  string sessionToken = 1;
}

message RemoveSessionRequest {
  int32 userId = 1;
}

message RemoveSessionResponse {
  bool isRemoved = 1;
}